# JustSync

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DEVLOG.md  GEMINI.md  README.md  architectural_notes.md  docker-compose.yml  go.mod  go.sum  main.go
.github/workflows/: publish-neovim.yml
.notes/: ghosts.md
api/: admin.go  session.go  snapshot.proto  sync.go
api_old/: admin.go  session.go
cmd/main/: main.go
cmd/viewer/: README.md  viewer.go
crates/client/: Cargo.toml
crates/client/src/: core.rs  crypto.rs  diff.rs  fs.rs  handler.rs  logger.rs  lsp.rs  main.rs  network.rs  state.rs
crates/server/: Cargo.toml
crates/server/src/: connection.rs  main.rs  server.rs  session.rs  user.rs
entities/: requests.go  syncrequest.go
extensions/jetbrains/: CHANGELOG.md  README.md  gradle.properties  settings.gradle.kts
extensions/vscode/: package-lock.json  package.json  tsconfig.json
extensions/vscode/src/: extension.js  extension.ts
internal/config/: config.go
internal/server/: server.go
internal/service/admin/: admin.go
internal/service/sync/: crdt.go  initial.go  sync.go
internal/transport/http/: session_handlers.go
pkg/: logger.go
service/: session.go  sync.go
service_old/: admin.go  session.go  sync.go
snapshot/: SNAPSHOT.sync.snap  ops.go  snapshot.pb.go  snapshot.proto
snapshot_old/: ops.go
src/: core.rs  crypto.rs  diff.rs  fs.rs  handler.rs  logger.rs  lsp.rs  main.rs  network.rs  proxy.rs  state.rs
utils/: config.go  logger.go  os.go  osutil.go  tokenman.go
utils_old/: config.go  os.go
websocket/: client.go  hub.go
(+21 files in other folders)
