[package]
name = "JustSync"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
clap = "4.5.53"
diamond-types = "1.0.0"
quinn = "0.11.9"
rcgen = "0.14.5"
ropey = "1.6.1"
rustls = "0.23.35"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
similar = "2.7.0"
socket2 = "0.6.1"
tokio = {version = "1.48.0", features = ["full"]}
uuid = {version = "1.19.0", features = ["v4", "fast-rng"]}
walkdir = "2.5.0"
