[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
petname = "2.0.2"
rand = "0.10.0"
quinn = "0.11.9"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "io-util"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
dashmap = "6.1.0"
rustls = "0.23.37"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.14.0"
rcgen = "0.14.7"
ring = "0.17.14"
hex = "0.4.3"
